# KarmanCore

./: README.md
firmware/esp_core/: CMakeLists.txt
firmware/esp_core/include/: DataPacket.h  HandleInputKSP.h  HardwareBuffer.h  Pin.h
firmware/esp_core/src/: DataPacket.cpp  HandleInputKSP.cpp  HardwareBuffer.cpp
firmware/include/: FlightHardware.h  TelemetryData.h
firmware/src/: BaseHardware.cpp  FlightHardware.cpp
